--- a/Examples/2D_NavierStokes/LidDrivenCavity/README
+++ b/Examples/2D_NavierStokes/LidDrivenCavity/README
@@ -46,7 +46,7 @@ The following input files are required:
 + boundary.inp  -   Boundary conditions
 + physics.inp   -   Physical parameters
 
-** See hypar/README for other (optional) input files
+** See piafs2d/README for other (optional) input files
 
 Due to file sizes, the required file initial.inp for 
 initial solution is not provided. It can be generated 
