--- a/Examples/2D_NavierStokes/Riemann2DCase4/README
+++ b/Examples/2D_NavierStokes/Riemann2DCase4/README
@@ -33,7 +33,7 @@ The following input files are required:
 + boundary.inp  -   Boundary conditions
 + physics.inp   -   Physical parameters (advection speed)
 
-** See hypar/README for other (optional) input files
+** See piafs2d/README for other (optional) input files
 
 
 Due to file sizes, the required file initial.inp for 
